<resources>
    <string name="app_name">ColePuq</string>
    <string-array name="colectivos">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>17 Azul</item>
        <item>17 Rojo</item>
        <item>114</item>
        <item>220</item>
        <item>300</item>
        <item>500</item>
        <item>714</item>
        <item>800</item>
        <item>801</item>
    </string-array>
    <string name="conectarbtn">CONECTAR</string>
    <string name="titulo">Bienvenido</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registarse</string>
    <string name="pregunta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="numero">Numero de celular</string>
    <string name="f_nac">Fecha de Nacimiento (01/01/2000)</string>
    <string name="contraseña">Contraseña</string>
    <string name="titulocolectivos">Lineas de Colectivos</string>
    <string name="titulovehiculos">Colectivos 220 activos</string>
    <string-array name="patentes">
        <item>AB-1234</item>
        <item>CD-5678</item>
        <item>EF-9012</item>
        <item>GHIJ-34</item>
        <item>KLMM-56</item>
        <item>OPQR-78</item>
        <item>STUV-90</item>
    </string-array>
    <string name="registro">Crear Cuenta</string>
    <string name="actualizar">Actualizar Informacion</string>
    <string name="eliminar">Eliminar Cuenta</string>
</resources>