<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="60sp">
    </TextView>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/usuario"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nombre"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/apellido"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/correo"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/numero"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/f_nac"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/contraseña"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <Button
        android:id="@+id/conectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:onClick="onclickgotolobby"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25sp">
    </Button>
</LinearLayout>