<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:textSize="60sp">
    </TextView>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/usuario"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/contraseña"
        android:textSize="20sp"
        android:textAlignment="center">
    </EditText>
    <Button
        android:id="@+id/conectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:onClick="onclickgotolobby"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25sp">
    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pregunta">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrate"
        android:textColor="@color/purple_200"
        android:onClick="onclickgotoregister"
        android:textSize="15sp">
    </TextView>
</LinearLayout>